Bug 381016 - Association documentation not shown in Documentation panel
Summary: Association documentation not shown in Documentation panel
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.21.3 (KDE Applications 16.12.3)
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-06-09 13:34 UTC by Hamidreza Jafari
Modified: 2017-06-18 11:01 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.22.3 (KDE Applications 17.04.3)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Hamidreza Jafari 2017-06-09 13:34:22 UTC
Hello,

If adding documentation to an association via its properties, when selecting the association the documentation is not visible in the Documentation panel.
Comment 1 Ralf Habacker 2017-06-17 20:45:16 UTC
How to reproduce:
1. start umbrello
2. add two classes and an association between both classes
3. select the association
5. press context menu -> properties
6. enter documentation
7. press okay

What happens:
The documentation window does not show the documentation entered in the property dialog. 

What is expected:
The documentation window should show the updated content


Additional informations: 
The documentation window shows the content which has has been entered by the documentation window before changing through the property dialog, which indicates that the documentation changed by the property dialog is overwritten
by the content of the documentation window.

A workaround is to change the documentation of an association *only* through the documentation window.
Comment 2 Ralf Habacker 2017-06-18 11:01:51 UTC
Git commit a2578d04a3661a51c9fc3a752b02dfa30fce0665 by Ralf Habacker.
Committed on 18/06/2017 at 11:01.
Pushed by habacker into branch 'Applications/17.04'.

Fix 'Association documentation not shown in Documentation panel'.

Keep overwrite related handling for association widgets in sync
with other DocWindow::showDocumentation() methods.

In case overwrite is true the content of the documentation widget
should be overwritten and not saved in widget.
FIXED-IN:2.22.3 (KDE Applications 17.04.3)

M  +1    -4    umbrello/docwindow.cpp

https://commits.kde.org/umbrello/a2578d04a3661a51c9fc3a752b02dfa30fce0665