Fix 'Association documentation not shown in Documentation panel'.

Keep overwrite related handling for association widgets in sync
with other DocWindow::showDocumentation() methods.

In case overwrite is true the content of the documentation widget
should be overwritten and not saved in widget.

BUG:381016
FIXED-IN:2.22.3 (KDE Applications 17.04.3)